--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 #container {
   background-color: #ff0000;
 }
+
+.header {
+  display: flex;
+  align-content: stretch;
+  align-items: center;
+  justify-content: space-between;
+}
+
+input {
+  width: 200px;
+  height: 25px;
+  border-radius: 25px;
+}
