--- a/style.css
+++ b/style.css
@@ -2,15 +2,22 @@
   background-color: #ff0000;
 }
 
-.header {
-  display: flex;
-  align-content: stretch;
-  align-items: center;
-  justify-content: space-between;
+img {
+  width: 100px;
 }
 
-input {
-  width: 200px;
-  height: 25px;
-  border-radius: 25px;
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.nav-item {
+  display: flex;
+}
+
+.nav-items {
+  padding: 24px;
+  font-size: 1.15rem;
+  display: flex;
 }
