added dynamic routung

--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ img {
 }
 
 .shimmer-container {
+  height: 72vh;
+  margin: 100px 0 auto;
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
@@ -204,4 +206,16 @@ img {
 .contact-container {
   margin: 100px 0 auto;
   height: 72vh;
+}
+
+/* Restraunt menu page */
+.restrauntmenu-container {
+  /* height: 72vh; */
+  margin: 100px 0 auto;
+  display: flex;
+}
+
+.footer-container {
+  height: 72vh;
+  margin: 100px 0 auto;
 }
