--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a {
   --light-grey: #dadce6;
 }
 
-img {
+.logo {
   padding: 10px 0 10px 15px;
   width: 100px;
 }
@@ -88,11 +88,11 @@ img {
 
 .card {
   width: 240px;
-  border-radius: 5px;
-  box-shadow: -1px 5px 10px 5px rgba(42, 42, 42, 0.2);
-  padding: 10px;
-  margin: 20px;
   cursor: pointer;
+  border-radius: 5px;
+  margin: 20px;
+  padding: 10px;
+  box-shadow: -1px 5px 10px 5px rgb(112 112 112 / 20%);
 }
 
 .card:hover {
@@ -258,14 +258,14 @@ img {
   line-height: 1.1;
   overflow-y: hidden;
 }
-.card {
+/* .card {
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
   margin-top: 20px;
   display: flex;
-}
+} */
 p {
   text-align: center;
   color: #575757;
