--- a/style.css
+++ b/style.css
@@ -441,6 +441,16 @@ p {
 }
 /* Login page CSS End */
 
+.instmart-container {
+  height: 10vh;
+  margin: 100px 0 auto;
+}
+
+.error-container {
+  height: 10vh;
+  margin: 100px 0 auto;
+}
+
 .footer-container {
   height: 10vh;
   margin: 100px 0 auto;
