--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -266,7 +270,7 @@ a {
   margin-top: 20px;
   display: flex;
 } */
-p {
+.para {
   text-align: center;
   color: #575757;
   margin-top: 0;
@@ -447,6 +451,11 @@ p {
 }
 
 .error-container {
+  height: 10vh;
+  margin: 100px 0 auto;
+}
+
+.instamart-container {
   height: 10vh;
   margin: 100px 0 auto;
 }
